<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_fragment_main"
        android:layout_marginTop="@dimen/margin_top_fragment_main"
        android:layout_marginRight="@dimen/margin_right_fragment_main"
        android:layout_marginLeft="@dimen/margin_left_fragment_main"
        tools:ignore="RtlHardcoded,RtlSymmetry">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/country"
            android:textColor="@color/colorText"
            android:textSize="@dimen/text_size_fragment_main"
            tools:ignore="SpUsage" />

        <TextView
            android:id="@+id/txtCountry"
            android:layout_marginStart="@dimen/margin_start_text_view_fragment_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="italic"
            android:textColor="@color/colorText"
            android:textSize="@dimen/text_size_fragment_main"
            tools:ignore="SpUsage" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_fragment_main"
        android:layout_marginTop="@dimen/margin_top_fragment_main"
        android:layout_marginRight="@dimen/margin_right_fragment_main"
        android:layout_marginLeft="@dimen/margin_left_fragment_main"
        tools:ignore="RtlHardcoded,RtlSymmetry">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/coordinates"
            android:textColor="@color/colorText"
            android:textSize="@dimen/text_size_fragment_main"
            tools:ignore="SpUsage" />

        <TextView
            android:id="@+id/txtCor"
            android:layout_marginStart="@dimen/margin_start_text_view_fragment_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="italic"
            android:textColor="@color/colorText"
            android:textSize="@dimen/text_size_fragment_main"
            tools:ignore="SpUsage"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_fragment_main"
        android:layout_marginTop="@dimen/margin_top_fragment_main"
        android:layout_marginRight="@dimen/margin_right_fragment_main"
        android:layout_marginLeft="@dimen/margin_left_fragment_main"
        tools:ignore="RtlHardcoded,RtlSymmetry">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/city"
            android:textColor="@color/colorText"
            android:textSize="@dimen/text_size_fragment_main"
            tools:ignore="SpUsage"/>

        <TextView
            android:id="@+id/txtCity"
            android:layout_marginStart="@dimen/margin_start_text_view_fragment_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="italic"
            android:textColor="@color/colorText"
            android:textSize="@dimen/text_size_fragment_main"
            tools:ignore="SpUsage"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_fragment_main"
        android:layout_marginTop="@dimen/margin_top_fragment_main"
        android:layout_marginRight="@dimen/margin_right_fragment_main"
        android:layout_marginLeft="@dimen/margin_left_fragment_main"
        tools:ignore="RtlHardcoded,RtlSymmetry">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/street"
            android:textColor="@color/colorText"
            android:textSize="@dimen/text_size_fragment_main"
            tools:ignore="SpUsage"/>

        <TextView
            android:id="@+id/txtStreet"
            android:layout_marginStart="@dimen/margin_start_text_view_fragment_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="italic"
            android:textColor="@color/colorText"
            android:textSize="@dimen/text_size_fragment_main"
            tools:ignore="SpUsage"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_fragment_main"
        android:layout_marginTop="@dimen/margin_top_fragment_main"
        android:layout_marginRight="@dimen/margin_right_fragment_main"
        android:layout_marginLeft="@dimen/margin_left_fragment_main"
        tools:ignore="RtlHardcoded,RtlSymmetry">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/house"
            android:textColor="@color/colorText"
            android:textSize="@dimen/text_size_fragment_main"
            tools:ignore="SpUsage"/>

        <TextView
            android:id="@+id/txtHouse"
            android:layout_marginStart="@dimen/margin_start_text_view_fragment_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="italic"
            android:textColor="@color/colorText"
            android:textSize="@dimen/text_size_fragment_main"
            tools:ignore="SpUsage"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_fragment_main"
        android:layout_marginTop="@dimen/margin_top_fragment_main"
        android:layout_marginRight="@dimen/margin_right_fragment_main"
        android:layout_marginLeft="@dimen/margin_left_fragment_main"
        tools:ignore="RtlHardcoded,RtlSymmetry">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temp"
            android:textColor="@color/colorText"
            android:textSize="@dimen/text_size_fragment_main"
            tools:ignore="SpUsage"/>

        <TextView
            android:id="@+id/txtTemp"
            android:layout_marginStart="@dimen/margin_start_text_view_fragment_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="italic"
            android:textColor="@color/colorText"
            android:textSize="@dimen/text_size_fragment_main"
            tools:ignore="SpUsage"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_fragment_main"
        android:layout_marginTop="@dimen/margin_top_fragment_main"
        android:layout_marginRight="@dimen/margin_right_fragment_main"
        android:layout_marginLeft="@dimen/margin_left_fragment_main"
        tools:ignore="RtlHardcoded,RtlSymmetry">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/humidity"
            android:textColor="@color/colorText"
            android:textSize="@dimen/text_size_fragment_main"
            tools:ignore="SpUsage"/>

        <TextView
            android:id="@+id/txtHumidity"
            android:layout_marginStart="@dimen/margin_start_text_view_fragment_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="italic"
            android:textColor="@color/colorText"
            android:textSize="@dimen/text_size_fragment_main"
            tools:ignore="SpUsage"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_fragment_main"
        android:layout_marginTop="@dimen/margin_top_fragment_main"
        android:layout_marginRight="@dimen/margin_right_fragment_main"
        android:layout_marginLeft="@dimen/margin_left_fragment_main"
        tools:ignore="RtlHardcoded,RtlSymmetry">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textColor="@color/colorText"
            android:textSize="@dimen/text_size_fragment_main"
            tools:ignore="SpUsage"/>

        <TextView
            android:id="@+id/txtDescription"
            android:layout_marginStart="@dimen/margin_start_text_view_fragment_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="italic"
            android:textColor="@color/colorText"
            android:textSize="@dimen/text_size_fragment_main"
            tools:ignore="SpUsage"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_fragment_main"
        android:layout_marginTop="@dimen/margin_top_fragment_main"
        android:layout_marginRight="@dimen/margin_right_fragment_main"
        android:layout_marginLeft="@dimen/margin_left_fragment_main"
        tools:ignore="RtlHardcoded,RtlSymmetry">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wind_speed"
            android:textColor="@color/colorText"
            android:textSize="@dimen/text_size_fragment_main"
            tools:ignore="SpUsage"/>

        <TextView
            android:id="@+id/txtWindSpeed"
            android:layout_marginStart="@dimen/margin_start_text_view_fragment_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="italic"
            android:textColor="@color/colorText"
            android:textSize="@dimen/text_size_fragment_main"
            tools:ignore="SpUsage"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_button_fragment_main"
        android:layout_gravity="bottom"
        android:gravity="center">

        <Button
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorButton"
            android:padding="@dimen/padding_button"
            android:text="@string/button_fragment_main" />
    </LinearLayout>

</LinearLayout>